# discord-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  example.env  main.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: main.yml  release.yml
script/: check  compile-requirements.sh  requirements.in  requirements.txt
script/linting/: lint
script/typing/: check
src/: bot.py  constants.py  main.py  rss.py  teams.py
src/commands/: join.py  logs.py  new_team.py  passwd.py  stats.py  team.py  ui.py
src/sr/discord_bot/: __main__.py  bot.py  constants.py  rss.py  teams.py
src/sr/discord_bot/commands/: join.py  logs.py  passwd.py  stats.py  team.py  ui.py
